<resources>
    <string name="app_name">ChatUp</string>
    <string name="default_web_client_id">635818144534-jcs167ao26bj4effrv577nlh60a9b6t3.apps.googleusercontent.com</string>
    <string name="wrong">Something is wrong</string>
    <string name="etPasswordAlBlank">the password must contain at least 6 characters</string>
    <string name="etEmailAlBlank">Enter an email address</string>
    <string name="etPasswordAlToShort">the password must contain at least 6 characters</string>
    <string name="open">Open menu</string>
    <string name="close">Close menu</string>
    <string name="is_typing">%1$s is typing...</string>
    <string name="login_canceled">Login canceled</string>
    <string name="no_google_accounts">No google accounts on this device</string>
    <string name="error">Error!: %1$s</string>
    <string name="no_email">no Email</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="Conversations">Conversations</string>
    <string name="find_users">Find users</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="start_chatting_with">Start a Chat with...</string>
    <string name="conversations">Conversations</string>
</resources>