<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_chats"
        android:title="@string/Conversations"
        android:icon="@drawable/outline_chat_bubble_24"/>

    <item
        android:id="@+id/menu_users"
        android:title="@string/find_users"
        android:icon="@drawable/outline_person_24"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"/>

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/outline_account_circle_24"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/outline_settings_24"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/log_out"
        android:icon="@drawable/outline_logout_24"/>

</menu>
